--- a/_sass/minimal-mistakes/_sidebar.scss
+++ b/_sass/minimal-mistakes/_sidebar.scss
@@ -134,8 +134,8 @@
   }
 
   img {
-    max-width: 150px;
-    // border-radius: 50%;
+    max-width: 221px;
+    border-radius: 50%;
 
     @include breakpoint($large) {
       // padding: 5px;
