--- a/_sass/minimal-mistakes/_variables.scss
+++ b/_sass/minimal-mistakes/_variables.scss
@@ -34,14 +34,23 @@ $header-font-family: $sans-serif !default;
 $caption-font-family: $serif !default;
 
 /* type scale */
-$type-size-1: 2.441em !default; // ~39.056px
-$type-size-2: 1.953em !default; // ~31.248px
-$type-size-3: 1.563em !default; // ~25.008px
-$type-size-4: 1.25em !default; // ~15px
-$type-size-5: 1em !default; // ~16px
-$type-size-6: 0.75em !default; // ~12px
-$type-size-7: 0.6875em !default; // ~11px
-$type-size-8: 0.625em !default; // ~10px
+// $type-size-1: 2.441em !default; // ~39.056px
+// $type-size-2: 1.953em !default; // ~31.248px
+// $type-size-3: 1.563em !default; // ~25.008px
+// $type-size-4: 1.25em !default; // ~15px
+// $type-size-5: 1em !default; // ~16px
+// $type-size-6: 0.75em !default; // ~12px
+// $type-size-7: 0.6875em !default; // ~11px
+// $type-size-8: 0.625em !default; // ~10px
+
+$type-size-1: 1.830em !default; // ~29.292px
+$type-size-2: 1.464em !default; // ~23.436px
+$type-size-3: 1.172em !default; // ~18.756px
+$type-size-4: 0.9375em !default; // ~15px
+$type-size-5: 0.75em !default; // ~12px
+$type-size-6: 0.5625em !default; // ~9px
+$type-size-7: 0.5156em !default; // ~8.25px
+$type-size-8: 0.4687em !default; // ~7.5px
 
 /* headline scale */
 $h-size-1: 1.563em !default; // ~25.008px
