--- a/_sass/minimal-mistakes/skins/_chath.scss
+++ b/_sass/minimal-mistakes/skins/_chath.scss
@@ -3,13 +3,13 @@
    ========================================================================== */
 
 /* Colors */
-$background-color: #f3f6f6 !default;
-$text-color: #228b22 !default;
+$background-color: #ffffff !default;
+$text-color: #272727 !default;
 $muted-text-color: #91c591 !default;
 $primary-color: #0f501f !default;
-$border-color: mix(#fff, #40514e, 75%) !default;
-$footer-background-color: #30e3ca !default;
-$link-color: #11999e !default;
+$border-color: mix(#fff, #0f501f, 75%) !default;
+$footer-background-color: #0f501f !default;
+$link-color: #0f501f !default;
 $masthead-link-color: $text-color !default;
 $masthead-link-color-hover: $text-color !default;
 $navicon-link-color-hover: mix(#fff, $text-color, 80%) !default;
