--- a/_sass/minimal-mistakes/skins/_chath.scss
+++ b/_sass/minimal-mistakes/skins/_chath.scss
@@ -8,7 +8,8 @@ $text-color: #272727 !default;
 $muted-text-color: #91c591 !default;
 $primary-color: #0f501f !default;
 $border-color: mix(#fff, #0f501f, 75%) !default;
-$footer-background-color: #440150 !default;
+// $footer-background-color: #440150 !default;
+$footer-background-color: #9C3848 !default;
 $link-color: #9002a8 !default;
 $masthead-link-color: $text-color !default;
 $masthead-link-color-hover: $text-color !default;
