--- a/_layouts/talk.html
+++ b/_layouts/talk.html
@@ -1,9 +1,9 @@
 ---
-layout: archive
+layout: single
 ---
 
 <article class="talk-page">
-  <h1>{{ page.title }}</h1>
+  <!-- <h1>{{ page.title }}</h1> -->
 
   <p class="talk-meta">
     <strong>{{ page.type }}</strong><br>
