--- a/_layouts/talk.html
+++ b/_layouts/talk.html
@@ -67,7 +67,7 @@ layout: single
 
 <article class="talk-page">
   <!-- <h1>{{ page.title }}</h1> -->
-  <span class="talk-type-badge badge-presentation">{{talk.type}}</span>
+  <span class="talk-type-badge badge-presentation">{{page.type}}</span>
   <p class="talk-meta">
     {{ page.event }} — {{ page.location }}<br>
     {{ page.date | date: "%B %Y" }}
