Edited talks.html to include sidebar.html

--- a/_layouts/talk.html
+++ b/_layouts/talk.html
@@ -1,5 +1,5 @@
 ---
-layout: single
+layout: default
 ---
 
 <style>
@@ -64,6 +64,8 @@ layout: single
     text-decoration: underline;
   }
 </style>
+
+{% include sidebar.html %}
 
 <article class="talk-page">
   <!-- <h1>{{ page.title }}</h1> -->
