--- a/_layouts/talk.html
+++ b/_layouts/talk.html
@@ -68,7 +68,7 @@ layout: default
 {% include sidebar.html %}
 
 <article class="talk-page">
-  <!-- <h1>{{ page.title }}</h1> -->
+  <h1>{{ page.title }}</h1>
   <span class="talk-type-badge badge-presentation">{{page.type}}</span>
   <p class="talk-meta">
     {{ page.event }} — {{ page.location }}<br>
