Reverted back to single format in talks.html

--- a/_layouts/talk.html
+++ b/_layouts/talk.html
@@ -1,5 +1,5 @@
 ---
-layout: default
+layout: single
 ---
 
 <style>
@@ -65,10 +65,10 @@ layout: default
   }
 </style>
 
-{% include sidebar.html %}
+<!-- {% include sidebar.html %} -->
 
 <article class="talk-page">
-  <h1>{{ page.title }}</h1>
+  <!-- <h1>{{ page.title }}</h1> -->
   <span class="talk-type-badge badge-presentation">{{page.type}}</span>
   <p class="talk-meta">
     {{ page.event }} — {{ page.location }}<br>
